<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/gallery_fragment">

    <fragment
        android:id="@+id/gallery_fragment"
        android:name="edu.vt.cs5254.fancygallery.GalleryFragment"
        android:label="GalleryFragment"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/show_photo"
            app:destination="@id/photoPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/map_fragment"
        android:name="edu.vt.cs5254.fancygallery.MapFragment"
        android:label="MapFragment"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/show_photo_from_marker"
            app:destination="@id/photoPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/photoPageFragment"
        android:name="edu.vt.cs5254.fancygallery.PhotoPageFragment"
        android:label="PhotoPageFragment"
        android:layout="@layout/fragment_photo_page">
        <argument
            android:name="photoPageUri"
            app:argType="android.net.Uri" />
    </fragment>
</navigation>